# -Cross-Zero

./: CMakeLists.txt  README.md
include/: Board.h  BoardTest.h  NCursesBoardView.h  StdioBoardView.h  Test.h
src/: Board.cpp  NCursesBoardView.cpp  StdioBoardView.cpp  main.cpp
test/: BoardTest.cpp
